<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MakeAppointment.search.SearchDoctorsFragment">

    <TextView
        android:id="@+id/topTextSearchDoctors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/searchDoctors"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/specializationTextInSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTextSearchDoctors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/specialization" />

    <Spinner
        android:id="@+id/searchSpecializationSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="40dp" />

    <RadioGroup
        android:id="@+id/searchArea"
        app:layout_constraintTop_toBottomOf="@+id/specializationTextInSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:orientation="horizontal"
        android:paddingLeft="40dp">

        <RadioButton
            android:id="@+id/localArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/localArea"
            android:textColor="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/selectArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectArea"
            android:textColor="@color/colorPrimaryDark" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/selectAreaFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchArea"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="135dp"
        android:onClick="searchDoctors"
        android:text="@string/search"
        style="@style/ButtonTheme"/>

</androidx.constraintlayout.widget.ConstraintLayout>